stopped cat going out of screen bounds, food score is working

--- a/src/day6.css
+++ b/src/day6.css
@@ -216,5 +216,5 @@
 .cell {
     display: inline-block;
     width: 23px;
-    height: 15px;
+    height: 25px;
 }
